fixed spacing on standard layout

--- a/scss/post.scss
+++ b/scss/post.scss
@@ -251,7 +251,7 @@ top: 0%;
 .countdown{
   display: none;
   bottom: 5%;
-  background: rgb(2 0 1 / 30%);
+  background: rgb(2 0 1 / 45%);
   border: 1px white;
   border-style: solid;
   position: absolute;
